@@ -270,7 +270,7 @@ for(var i in bootItems) {
 $(bootList).children().hover(function(){$(this).addClass('vboxHover');},function(){$(this).removeClass('vboxHover');});
 
 /* Hide Chipset selection if we didn't get one, or VirtualBox version is 4.0.0 A safeguard */
-if(!$('#vboxSettingsDialog').data('vboxMachineData').chipsetType || $('#vboxIndex').data('vboxConfig').version.string == '4.0.0') {
+if(!$('#vboxSettingsDialog').data('vboxMachineData').chipsetType) {
 	$('#vboxSettingsSystemChipsetRow').css('display','none');
 } else {
 	$(document.forms['frmVboxSettings'].vboxSettingsSystemChipset).val($('#vboxSettingsDialog').data('vboxMachineData').chipsetType);
@@ -379,7 +379,7 @@ $('#vboxSettingsDialog').bind('save',function(){
 	$('#vboxSettingsDialog').data('vboxMachineData').RTCUseUTC = (document.forms['frmVboxSettings'].vboxSettingsSystemRTCUseUTC.checked ? 1 : 0);
 
 	/* Only if we had a chipset */
-	if($('#vboxSettingsDialog').data('vboxMachineData').chipsetType && $('#vboxIndex').data('vboxConfig').version.string != '4.0.0')
+	if($('#vboxSettingsDialog').data('vboxMachineData').chipsetType)
 		$('#vboxSettingsDialog').data('vboxMachineData').chipsetType = $(document.forms['frmVboxSettings'].vboxSettingsSystemChipset).val();
 		
 	/* Only if advanced config is enabled */
